- Added new action "Add History Line" for quickly inserting 0 !HISTORY lines to headers
- Added new action "Go to line", default shortcut Ctrl-G. It should be obvious what it does.
- Added support for logoed studs, this should satisfy Steffen. :p
- Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction from errorneous MLCAD
	syntax ('0 BFC CERTIFY CLIP').
- When an external program is attempted to be used without a binary path defined, one will be asked
	with an input dialog instead of being told to go to configuration to set the path.
- When adding edges with Intersector (which is done with Isecalc), the user is prompted for Isecalc's
	path now as well if necessary instead of just ignoring it and not adding the edgelines.
- If the vertex snapper finds a vertex closer than 4 pixels, it likely is the vertex being looked for
	and the algorithm can terminate early, hopefully this will save a few cycles on large parts.
- The camera icons now draw real tooltips instead of emulated ones.
- Fixed: The message log was still written with black text with dark backgrounds.

=================================================
== Changes in version 0.2-alpha
=================================================

- Completely rewrote history (undo/redo) code, making it a LOT stabler in the process.
- Added ability to snap to pre-existing vertices while drawing.
- Replaced the radial type with a single action to generate primitives.
- Replaced parts list in subfile item list with a primitive listing. Listing is generated either if
	it's not cached (prims.cfg in configuration directory) or on user demand. Primitives can be categorised
	with the use of a regex-based configuration file, with a valid default which should cater to most users.
- Added an export to file action, moved it + insert from to File menu
- Added the message log - instead of being a separate text widget as originally planned, messages are
	drawn into the viewport. Messages expire after 5 seconds.