@@ -25,6 +25,10 @@
 #include "gldraw.h"
 #include "colors.h"
 
+cfg (String, ld_defaultname, "");
+cfg (String, ld_defaultuser, "");
+cfg (Int, ld_defaultlicense, 0);
+
 // List of all LDObjects
 List<LDObject*> g_LDObjects;
 
