@@ -17,6 +17,8 @@
 - Added support for logoed studs, this should satisfy Steffen. :p
 - Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction from errorneous MLCAD
 	syntax ('0 BFC CERTIFY CLIP').
+- Added config fields for default name/username/license. This data will be automatically filled
+	into forms that require such information.
 - When an external program is attempted to be used without a binary path defined, one will be asked
 	with an input dialog instead of being told to go to configuration to set the path.
 - When adding edges with Intersector (which is done with Isecalc), the user is prompted for Isecalc's
